resolucao final