@@ -5,15 +5,18 @@ import java.time.LocalDate;
 import java.time.ZoneId;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import com.devsuperior.dsmeta.dto.SaleDTO;
 import com.devsuperior.dsmeta.dto.SaleMinDTO;
-import com.devsuperior.dsmeta.dto.SellerMinDTO;
 import com.devsuperior.dsmeta.entities.Sale;
-import com.devsuperior.dsmeta.entities.Seller;
+import com.devsuperior.dsmeta.projections.SaleMinProjections;
 import com.devsuperior.dsmeta.repositories.SaleRepository;
 
 @Service
@@ -21,38 +24,54 @@ public class SaleService {
 
 	@Autowired
 	private SaleRepository repository;
-	
-	public SaleMinDTO findById(Long id) {
+
+	public SaleDTO findById(Long id) {
 		Optional<Sale> result = repository.findById(id);
 		Sale entity = result.get();
-		return new SaleMinDTO(entity);
+		return new SaleDTO(entity);
 	}
 
 	@Transactional(readOnly = true)
-	public List<SaleMinDTO> reportSale(String min, String max, String name) {
-		LocalDate minDate = LocalDate.parse(min);
-		LocalDate maxDate = LocalDate.parse(max);
-		if (maxDate == null) {
-			maxDate= LocalDate.ofInstant(Instant.now(), ZoneId.systemDefault()); 
-		}
-		if (minDate == null) {
+	public Page<SaleDTO> reportSale(String min, String max, String name, Pageable pageable) {
+		LocalDate minDate=null;
+		LocalDate maxDate=null;
+
+		if (min == null || min.equals("0")) {
+			maxDate = LocalDate.ofInstant(Instant.now(), ZoneId.systemDefault());
 			minDate = maxDate.minusYears(1L);
+			
+		} else if (max == null || max.equals("0") ) {
+			minDate = LocalDate.parse(min);
+			maxDate = LocalDate.ofInstant(Instant.now(), ZoneId.systemDefault());
+			
+		} else {
+			minDate = LocalDate.parse(min);
+			maxDate = LocalDate.parse(max);
 		}
-		List<Sale> sale = repository.searchReport(minDate, maxDate, name);
-		return sale.stream().map(x -> new SaleMinDTO(x)).toList();
+		Page<Sale> sale = repository.searchReport(minDate, maxDate, name, pageable);
+		return sale.map(x -> new SaleDTO(x));
 	}
-	
+
 	@Transactional(readOnly = true)
-	public List<SellerMinDTO> summary(String min, String max){
-		LocalDate minDate = LocalDate.parse(min);
-		LocalDate maxDate = LocalDate.parse(max);
-		if (maxDate == null) {
-			maxDate= LocalDate.ofInstant(Instant.now(), ZoneId.systemDefault()); 
-		}
-		if (minDate == null) {
+	public List<SaleMinDTO> summary(String min, String max) {
+		LocalDate minDate=null;
+		LocalDate maxDate=null;
+
+		if (min == null || min.equals("0")) {
+			maxDate = LocalDate.ofInstant(Instant.now(), ZoneId.systemDefault());
 			minDate = maxDate.minusYears(1L);
+			
+		} else if (max == null || max.equals("0") ) {
+			minDate = LocalDate.parse(min);
+			maxDate = LocalDate.ofInstant(Instant.now(), ZoneId.systemDefault());
+			
+		} else {
+			minDate = LocalDate.parse(min);
+			maxDate = LocalDate.parse(max);
 		}
-		List<Seller> seller = repository.searchSummary(minDate, maxDate);
-		return seller.stream().map(x -> new SellerMinDTO(x)).toList();
+		
+		List<SaleMinProjections> result = repository.searchSummary(minDate, maxDate);
+		return result.stream().map(x -> new SaleMinDTO(x)).collect(Collectors.toList());
+
 	}
 }
